--- a/internal/templates/errors/html/500.html
+++ b/internal/templates/errors/html/500.html
@@ -48,7 +48,7 @@
                 </div>
               </form>
               <div class="mt-3">
-                <a href="index.html">Back to Home</a>
+                <a href="/">Back to Home</a>
               </div>
             </div>
           </div>
