--- a/internal/templates/layouts/html/sidebar.html
+++ b/internal/templates/layouts/html/sidebar.html
@@ -33,13 +33,13 @@
           ><i data-feather="command"></i><span>Academic Competiton</span></a
         >
         <ul class="dropdown-menu">
-          <li><a class="nav-link" href="chat.html">Register for a Competiton</a></li>
-          <li><a class="nav-link" href="portfolio.html">View Registered Candidate</a></li>
+          <li><a class="nav-link" href="/examination/create">Register for a Competiton</a></li>
+          <li><a class="nav-link" href="/examination/view">View Registered Candidate</a></li>
         </ul>
       </li>
       <li class="dropdown">
         <a href="#" class="menu-toggle nav-link has-dropdown"
-          ><i data-feather="mail"></i><span>Email</span></a
+          ><i data-feather="mail"></i><span>Grading Examination</span></a
         >
         <ul class="dropdown-menu">
           <li><a class="nav-link" href="email-inbox.html">Inbox</a></li>
