add more feature

--- a/internal/templates/layouts/html/sidebar.html
+++ b/internal/templates/layouts/html/sidebar.html
@@ -10,8 +10,8 @@
     <ul class="sidebar-menu">
       <li class="menu-header">Main</li>
       <li class="dropdown active">
-        <a href="index.html" class="nav-link"
-          ><i data-feather="monitor"></i><span>Dashboard</span></a
+        <a href="/" class="nav-link"
+          ><i data-feather="monitor"></i><span>Home</span></a
         >
       </li>
       {{/* <li>
@@ -39,12 +39,10 @@
       </li>
       <li class="dropdown">
         <a href="#" class="menu-toggle nav-link has-dropdown"
-          ><i data-feather="mail"></i><span>Grading Examination</span></a
-        >
+          ><i data-feather="mail"></i><span>Grading Examination</span></a>
         <ul class="dropdown-menu">
-          <li><a class="nav-link" href="email-inbox.html">Inbox</a></li>
-          <li><a class="nav-link" href="email-compose.html">Compose</a></li>
-          <li><a class="nav-link" href="email-read.html">read</a></li>
+          <li><a class="nav-link" href="/examination/grading">Register For Examination</a></li>
+          <li><a class="nav-link" href="/examination/candidates">View Candidates</a></li>
         </ul>
       </li>
       <li class="menu-header">UI Elements</li>
