--- a/internal/templates/layouts/html/head.html
+++ b/internal/templates/layouts/html/head.html
@@ -18,10 +18,15 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
+  <link rel="stylesheet" href="assets/bundles/izitoast/css/iziToast.min.css">
+
     <link
       href="https://fonts.googleapis.com/css?family=Righteous"
       rel="stylesheet"
     />
+    <script src="assets/bundles/izitoast/js/iziToast.min.js"></script>
+  <!-- Page Specific JS File -->
+  <script src="assets/js/page/toastr.js"></script>
     <!-- Custom styles for this template -->
     <link href="/assets/css/mediumish.css" rel="stylesheet" />
   </head>
